--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,9 @@ include 'oauth2-auth-client'
 findProject(':springboot-oauth2:oauth2-auth-client')?.name = 'oauth2-auth-client'
 include 'springboot-oauth2:oauth2-auth-client'
 findProject(':springboot-oauth2:oauth2-auth-client')?.name = 'oauth2-auth-client'
+include 'oauth2-auth-server-jwt'
+include 'springboot-oauth2:oauth2-auth-server-jwt'
+findProject(':springboot-oauth2:oauth2-auth-server-jwt')?.name = 'oauth2-auth-server-jwt'
+include 'springboot-oauth2:oauth2-auth-client-jwt'
+findProject(':springboot-oauth2:oauth2-auth-client-jwt')?.name = 'oauth2-auth-client-jwt'
 
